cmake_minimum_required(VERSION 3.8)

project(pylibzip
  VERSION 1.0.0
  LANGUAGES C)

FIND_PACKAGE(SWIG 4.0 COMPONENTS python)
INCLUDE(UseSWIG)
SET(UseSWIG_TARGET_NAME_PREFERENCE STANDARD)

FIND_PACKAGE(PythonLibs REQUIRED)

ADD_SUBDIRECTORY(libzip)

INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS}
  )

SWIG_ADD_LIBRARY(pylibzip
  TYPE SHARED
  LANGUAGE PYTHON
  SOURCES libzip.i)

SET_PROPERTY(TARGET pylibzip PROPERTY
  SWIG_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/libzip/lib" "libzip")

SWIG_LINK_LIBRARIES(pylibzip
  zip)
