cmake_minimum_required(VERSION 3.12)


IF (POLICY CMP0078)
CMAKE_POLICY(
    SET CMP0078 NEW
    )
ENDIF()

IF (POLICY CMP0086)
CMAKE_POLICY(
    SET CMP0086 NEW
    )
ENDIF()

project(pylibarchive
  VERSION 1.0.0
  LANGUAGES C CXX)

FIND_PACKAGE(SWIG 4.0 COMPONENTS python)
INCLUDE(UseSWIG)
SET(UseSWIG_TARGET_NAME_PREFERENCE STANDARD)

FIND_PACKAGE(PythonLibs REQUIRED)

ADD_SUBDIRECTORY(libzip)
ADD_SUBDIRECTORY(third_party/lib7zip)

INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS}
  )

SWIG_ADD_LIBRARY(pylibarchive
  TYPE SHARED
  LANGUAGE PYTHON
  SOURCES libzip.i)

SET_PROPERTY(TARGET pylibarchive PROPERTY
  SWIG_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/libzip/lib" "libzip")

TARGET_LINK_LIBRARIES(pylibarchive
  zip)
