ADD_LIBRARY(libarchive STATIC
  libarchive.h libarchive.cpp)

TARGET_INCLUDE_DIRECTORIES(libarchive PRIVATE
  "${CMAKE_CURRENT_SOURCE_DIR}/../third_party/lib7zip/src")

TARGET_INCLUDE_DIRECTORIES(libarchive PUBLIC
  "${CMAKE_CURRENT_SOURCE_DIR}")

SET_TARGET_PROPERTIES(libarchive PROPERTIES LINKER_LANGUAGE CXX)
